--- a/resume.html
+++ b/resume.html
@@ -4,9 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Resume</title>
-
 </head>
-<body bgcolor = pink></bgcolor>
+<body background-color = pink></bgcolor>
     <img src="./graduatedpic.jpg" height="200"/>
     <h1>Profile</h1>
     <h3>Name: Ani Bo Luk <br />
