--- a/resume.html
+++ b/resume.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Resume</title>
 </head>
-<body background-color = pink></bgcolor>
+<body> 
     <img src="./graduatedpic.jpg" height="200"/>
     <h1>Profile</h1>
     <h3>Name: Ani Bo Luk <br />
